--- a/src/frontend/src/app/find-f/find-f.component.html
+++ b/src/frontend/src/app/find-f/find-f.component.html
@@ -51,10 +51,10 @@
       <div class="info_about_pet">
          <p>{{animal.sex}}</p>
          <div class="circle"></div>
-         <p>{{animal.age}} роки</p>
+         <p>{{animal.age}} роки/років</p>
       </div>
       <div class="info_about_pet">
-        <p>{{animal.specialCare  ? "Потребує  догляду" : "Не потребує  догляду"}}</p>
+        <p>{{animal.specialCare  ? "Потребує особливого догляду" : "Не потребує особливого догляду"}}</p>
       </div>
 
       <div class="info_about_pet">
@@ -86,7 +86,7 @@
       <div class="info" >
          <h2><strong>{{ selectedAnimal.name }}</strong></h2>
         <p><strong>Тип: </strong> {{ selectedAnimal.sex }}</p>
-        <p><strong>Вік: </strong>{{ selectedAnimal.age }} років</p>
+        <p><strong>Вік: </strong>{{ selectedAnimal.age }} роки/років</p>
         <p><strong>Розмір: </strong> {{ selectedAnimal.size }}</p>
         <p><strong>Вакцинована: </strong>{{selectedAnimal.vaccinated ? "Так" : "Ні"}}</p>
         <p><strong>Стерилізована: </strong>{{selectedAnimal.sterilized  ? "Так" : "Ні"}}</p>
