--- a/src/frontend/src/app/donate/donate.component.html
+++ b/src/frontend/src/app/donate/donate.component.html
@@ -47,9 +47,9 @@
       <p>Email: {{ selectedShelter.email }}</p>
 
       <h3>Ревізити для переказу:</h3>
-      <p>{{ selectedShelter.card }}</p>
-      <p>{{ selectedShelter.paypal }}</p>
-      <p>{{ selectedShelter.iban }}</p>
+      <p>Карта: {{ selectedShelter.card }}</p>
+        <p>PayPal: {{ selectedShelter.paypal }}</p>
+        <p>IBAN: {{ selectedShelter.iban }}</p>
     </div>
   </div>
 
