Підправив маленькі недоліки

--- a/src/frontend/src/app/Admin/admindashbord/admindashbord.component.html
+++ b/src/frontend/src/app/Admin/admindashbord/admindashbord.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
 <div *ngIf="showRules" class="admin-rules">
-    <div style="max-width: 800px; margin: auto; padding: 20px; border-radius: 10px; background: #f8f9fa; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
-      <h2 style="text-align: center; color: #343a40;">Правила адміністратора</h2>
-      <ul style="line-height: 1.6; font-size: 16px; color: #495057;">
+    <div class="main_div">
+      <h2>Правила адміністратора</h2>
+      <ul>
         <li><strong>Конфіденційність:</strong> Заборонено передавати дані користувачів третім особам.</li>
         <li><strong>Контроль контенту:</strong> Виявляти та видаляти неприпустимий або заборонений контент.</li>
         <li><strong>Користувацькі запити:</strong> Оперативно реагувати на звернення та скарги користувачів.</li>
