--- a/src/frontend/src/app/Admin/users/users.component.html
+++ b/src/frontend/src/app/Admin/users/users.component.html
@@ -107,7 +107,7 @@
 
              <h3></h3>
         <label for="name">ID:</label>
-        <input type="text" id="name" [(ngModel)]="id_for_delete" placeholder="ID користувача">
+        <input type="number" id="name" [(ngModel)]="id_for_delete" placeholder="ID користувача">
 
         <div>
             <button class="confirm_edit" (click)="confirmDelete()">Видалити</button>
