--- a/src/frontend/src/app/find-f/find-f.component.html
+++ b/src/frontend/src/app/find-f/find-f.component.html
@@ -33,6 +33,8 @@
         <button [ngClass]="{'active' : activeFilters['city'].includes('Київ')}" (click)="toggleFilter('city','Київ')">Київ</button>
         <button [ngClass]="{'active' : activeFilters['city'].includes('Одеса')}" (click)="toggleFilter('city','Одеса')">Одеса</button>
         <button [ngClass]="{'active' : activeFilters['city'].includes('Львів')}" (click)="toggleFilter('city','Львів')">Львів</button>
+        <button [ngClass]="{'active' : activeFilters['city'].includes('Харків')}" (click)="toggleFilter('city','Харків')">Харків</button>
+
     </div>
       <div class="filter-groupOther">
           <label>Інше</label>
