--- a/src/frontend/src/app/for-all-shelter/for-all-shelter.component.html
+++ b/src/frontend/src/app/for-all-shelter/for-all-shelter.component.html
@@ -113,11 +113,11 @@
       </div>
     </div>
 
-       <div class="pagination">
+       <!-- <div class="pagination">
           <button (click)="previousPage()" [disabled]="currentPage === 1" class="previous">Назад</button>
           <span>Сторінка {{ currentPage }} з {{ totalPages }}</span>
           <button (click)="nextPage()" [disabled]="currentPage === totalPages"  class="next">Вперед</button>
-        </div>
+        </div> -->
 
 
 
