--- a/src/frontend/src/app/Admin/adopt/adopt.component.html
+++ b/src/frontend/src/app/Admin/adopt/adopt.component.html
@@ -124,7 +124,7 @@
 
              <h3></h3>
         <label for="name">ID:</label>
-        <input type="text" id="name" [(ngModel)]="id_for_delete" placeholder="ID заявки">
+        <input class="dell" type="number" id="name" [(ngModel)]="id_for_delete" placeholder="ID заявки">
 
         <div>
             <button class="confirm_edit" (click)="confirmDelete()">Видалити</button>
