--- a/src/frontend/src/app/Admin/shelteradmin/shelteradmin.component.css
+++ b/src/frontend/src/app/Admin/shelteradmin/shelteradmin.component.css
@@ -4,7 +4,7 @@ body{width: 100%; height: 100%; }
 .function{
     display: flex;
     gap: 20px;
-    margin: 20px 200px;
+    margin: 20px 105px;
     font-family: 'e-ukr';
     font-size: 15px;
 }
@@ -60,10 +60,10 @@ input[type='search']::placeholder{ color: aliceblue;}
 input[type='search']{padding: 10px;}
 
 .table{
-    margin: 15px 145px;
-    width: 80%;
-    
-}
+    margin: 15px -4px;
+    /* width: 80%; */
+  }
+
 .modal, .modal_for_add,.modal_for_search {
     position: fixed;
     top: 0;
@@ -93,12 +93,41 @@ input[type='search']{padding: 10px;}
   th, td {
     border: 2px solid rgb(194, 192, 192);
   }
-  th{
+  th, td{
     text-align: center;
    }
   th.exclude, td.exclude {
     border: none; 
     background-color: white;
+  }
+
+  .shorten-link {
+    display: block;
+    width: 130px; 
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+  .shorten_iban{
+    display: block;
+    width: 80px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+  .short-descrip{
+    display: block;
+    width: 75px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+  .short-card{
+    display: block;
+    width: 60px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
   .clearbutton{
     border: none;
