--- a/src/frontend/src/app/Admin/tabel-animals/tabel-animals.component.css
+++ b/src/frontend/src/app/Admin/tabel-animals/tabel-animals.component.css
@@ -4,7 +4,7 @@ body{width: 100%; height: 100%; }
 .function{
     display: flex;
     gap: 20px;
-    margin: 20px 200px;
+    margin: 20px 130px;
     font-family: 'e-ukr';
     font-size: 15px;
 }
@@ -60,8 +60,14 @@ input[type='search']::placeholder{ color: aliceblue;}
 input[type='search']{padding: 10px;}
 
 .table{
-    margin: 15px 175px;
+    margin: 15px 100px;
     width: 80%;
+}
+.short_url{
+  display: block;
+  width: 130px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .modal, .modal_for_add,.modal_for_search {
     position: fixed;
@@ -92,7 +98,7 @@ input[type='search']{padding: 10px;}
     border: none; 
     background-color: white;
   }
-  th{
+  th, td{
    text-align: center;
   }
   .clearbutton{
