--- a/src/frontend/src/app/Admin/volonters/volonters.component.html
+++ b/src/frontend/src/app/Admin/volonters/volonters.component.html
@@ -91,7 +91,7 @@
 
              <h3></h3>
         <label for="name">ID:</label>
-        <input type="text" id="name" [(ngModel)]="Id" placeholder="ID заявки">
+        <input type="number" id="name" [(ngModel)]="Id" placeholder="ID заявки">
 
         <div>
             <button class="confirm_edit" (click)="confirmDelete()">Видалити</button>
