--- a/src/frontend/src/app/Admin/ward/ward.component.html
+++ b/src/frontend/src/app/Admin/ward/ward.component.html
@@ -112,7 +112,7 @@
 
              <h3></h3>
         <label for="name">ID:</label>
-        <input type="text" id="name" [(ngModel)]="id_for_delete" placeholder="ID заявки">
+        <input type="number" id="name" [(ngModel)]="id_for_delete" placeholder="ID заявки">
 
         <div>
             <button class="confirm_edit" (click)="confirmDelete()">Видалити</button>
