--- a/src/frontend/src/app/find-f/find-f.component.css
+++ b/src/frontend/src/app/find-f/find-f.component.css
@@ -3,10 +3,10 @@ body{
 }
 .animal-card .buttonn{
   position: absolute; /* Абсолютна позиція відносно animal-card */
-  bottom: 45px;
+  bottom: 60px;
   right: 10px;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   color: #f9f9f9;
   background-color: #fc8f00;
   border-radius: 100%;
@@ -62,11 +62,11 @@ body{
 
 }
 
-.sidebar .filter-group button:hover,
+/* .sidebar .filter-group button:hover,
 .sidebar .filter-groupOther button:hover {
   background-color: #fc8f00;
   color: white;
-}
+} */
 
 .sidebar .filter-group button.active,
 .sidebar .filter-groupOther button.active {
@@ -312,7 +312,13 @@ button:hover{
 .scroll-to-top.show {
   display: block;
 }
-
+@media (min-width: 1150px) {
+  .sidebar .filter-group button:hover,
+  .sidebar .filter-groupOther button:hover {
+    background-color: #fc8f00;
+    color: white;
+  }
+}
 @media (max-width: 1150px) {
   .animals-container .pagination { margin: 25px auto;}
   .pagination {
