--- a/src/frontend/src/app/for-all-shelter/for-all-shelter.component.css
+++ b/src/frontend/src/app/for-all-shelter/for-all-shelter.component.css
@@ -14,8 +14,8 @@ body {
 }
 .animal-card .buttonn{
   position: absolute; /* Абсолютна позиція відносно animal-card */
-  bottom: 45px;
-  right: 10px; 
+  bottom: 55px;
+  right: 8px; 
   width: 50px;
   height: 50px;
   color: #f9f9f9;
@@ -308,7 +308,13 @@ body {
   }
 
   
-
+  @media (min-width: 1150px) {
+    .sidebar .filter-group button:hover,
+    .sidebar .filter-groupOther button:hover {
+      background-color: #fc8f00;
+      color: white;
+    }
+  }
 @media (max-width: 1150px) {
  
   .animals-container .pagination { margin: 25px auto;}
