--- a/src/frontend/src/app/free-people/free-people.component.html
+++ b/src/frontend/src/app/free-people/free-people.component.html
@@ -22,13 +22,13 @@
     <input type="email" id="email" [(ngModel)]="email" name="email" placeholder="Введіть ваш email" required>
 
     <label for="phone">Телефон:</label>
-    <input type="tel" id="phone" [(ngModel)]="contactNumber" name="contactNumber" placeholder="Введіть ваш номер телефону" required>
+    <input type="number" id="phone" [(ngModel)]="contactNumber" name="contactNumber" placeholder="Введіть ваш номер телефону" required>
 
     <label for="shelter">Притулки:</label>
     <select type="text" id="shelter" [(ngModel)]="shelter"  name="shelter"  required>
       <option value="" disabled selected hidden>Оберіть притулок</option>
       <option *ngFor="let shelter of shelters" [value]="shelter.id">
-        {{ shelter.name }}
+        {{ shelter.name }} (м.{{ shelter.city }})
       </option>
     </select>
 
