--- a/src/frontend/src/app/thigns/thigns.component.css
+++ b/src/frontend/src/app/thigns/thigns.component.css
@@ -7,7 +7,6 @@ body {
   font-family: 'e-ukr';
   width: 100%;
   height: 100%;
-  margin-left: 20px;
   margin-top: 20px;
   color: #333333;
 }
@@ -111,5 +110,9 @@ ul {
   .help1, .help2, .help3, .help4 {
     flex: 1 1 100%; /* Розтягнути картки на всю ширину */
     max-width: 100%; /* Максимальна ширина 100% */
+  }
+  .title2 {
+    margin-left: 20px;
+    width: 90%;
   }
 }
