fixed login/register forms

--- a/src/frontend/src/app/app.component.html
+++ b/src/frontend/src/app/app.component.html
@@ -67,7 +67,7 @@
         <a routerLink='/regest' class="Registr"  *ngIf="!isLogged">Зареєструватися</a>
 
         <div *ngIf="isLogged" class="login">
-          <img src="/user.svg" alt="1488" class="photo">
+          <img src="/user.svg" alt="user" class="photo">
           <button class="btn_out" (click)="logout()">Вийти</button>
          </div>
 
