test auto build

--- a/src/frontend/src/app/app.component.html
+++ b/src/frontend/src/app/app.component.html
@@ -39,7 +39,7 @@
         <div class="dropdown-content">
           <a routerLink="/free-people"  >Стати волонтером</a>
           <a routerLink="/adopt"  >Усиновити тваринку</a>
-          <a routerLink="/thigns"  >Допомога</a>
+          <a routerLink="/thigns"  >Допомогти</a>
         </div>
       </li>
       <li class="nav-item "><a class="nav-link" routerLink='/donate'  routerLinkActive="active">Донат</a></li>
